k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-dashboard
  namespace: home-dashboard
  labels:
    app: home-dashboard
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: home-dashboard
