k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-dashboard
  namespace: home-dashboard
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: home-dashboard-redirect-https@kubernetescrd
spec:
  tls:
  - hosts:
    - dashboard.200tech.site
    secretName: wildcard-200tech-site-tls
  rules:
  - host: dashboard.200tech.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: home-dashboard
            port:
              name: http
